# NyayaBodh

./: .dockerignore  .env  .gitignore  DOCKER.md  Dockerfile.heroku  HEROKU_DEPLOYMENT.md  Procfile  README.md  deploy-backend.sh  deploy-frontend.sh  deploy-heroku.sh  deploy_heroku.sh  docker-compose.override.yml.example  docker-compose.yml  heroku-frontend.yml  heroku.yml  index.html  nyaybodh.md  package-lock.json  package.json  prepare-heroku.sh  readme.md  setup-docker.sh  tailwind.config.js  vite.config.js
api/: .dockerignore  .env  .gitignore  Dockerfile  debug_search.py  entrypoint.sh  init_db.py  llama-doc-gen.py  main.py  migrate_to_neon.py  pyproject.toml  requirements.txt  serverdemo.py  services.py  test_auth.py
api/apis/: __init__.py  auth.py  chat.py  chatbot.py  classes.py  current_chunks.json  current_json  readthis.txt  recommend.py  requirements.txt  server.py  test.html  test.py
api/apis/current_context/: Dani Wooltex Corporation & Ors..pdf.txt  G.M. Shahul Hameed.pdf.txt  Lucknow Nagar Nigam & Others.pdf.txt  Mrs. Bhumikaben N. Modi & Ors..pdf.txt
api/apis/resources/: summaries.csv
api/app/: auth.py  auth_service.py  chat_classes.py  chat_service.py  database.py  doc_gen_service.py  embedding_service.py  global_classes.py  model_config.py  vector_store_service.py
api/app/classes/: chat_classes.py  global_classes.py
api/app/routers/: auth.py  chat.py  doc_gen.py
api/app/services/: auth_service.py  vector_store_service.py
api/app/utils/: config.py  database.py
api/prisma/: schema.prisma
api/utils/: auth.py
api2/: main.py  (+1 more)
db/: .env  (+5 more)
(+239 files in other folders)
